--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -5,4 +5,7 @@ jobs:
    runs-on: ubuntu-latest
    steps:
      - name: Print hello world
-       run: echo "hello test"
+       run: |
+        echo "hello test"
+        echo "hello devops"
+        
