Update demo1.yml  build test and deploy

--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -9,12 +9,14 @@ jobs:
 
   Test: 
    runs-on: ubuntu-latest
+   needs: build
    steps:
      - name: Print hello world
        run: echo "this is test job"
   
   Deploy: 
    runs-on: ubuntu-latest
+   needs: Test
    steps:
      - name: Print hello world
        run: echo "this is Deploy job"
