--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,24 +1,27 @@
 name: Hello World
-on: push
+on: 
+ push :
+   pull_request:
+       branches:
+        - main
 jobs: 
   build: 
    runs-on: ubuntu-latest
    steps:
      - name: Print hello world
        run: echo "this is build job"
-
   Test: 
    runs-on: ubuntu-latest
    needs: build
    steps:
      - name: Print hello world
-       run: echo "this is test job"
+       run: echo "this is test111 job"
   
   Deploy: 
    runs-on: ubuntu-latest
    needs: Test
    steps:
      - name: Print hello world
-       run: echo "this is Deployment job"
+       run: echo "this is Deployment11 job"
         
         
